--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Ahmad rosif alkhikam | Ganteng kan</title>
+	<title>Mirzamwdh | Tratata🤪</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,42 +25,22 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Rosif !</div>
-		<div class="tagline">Siswa SMK Syafi'i Akrom | TJKT 4</div>
+		<div class="intro">Hello, I'm Mirza !</div>
+		<div class="tagline">Pengagum senja | </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/sip-userbot">
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
-      <a target="_blank" href="https://instagram.com/kanjeng_47">
+      <a target="_blank" href="https://instagram.com/mieerzaa_">
         <i class="fab fa-instagram" aria-hidden="true" title="instagram"></i>
         <span class="sr-only">instagram
 </span>
       </a>
-      <a target="_blank" href="https://facebook.com/profile.php?id=100068717486460">
-        <i class="fab fa-facebook" aria-hidden="true" title="facebook"></i>
-        <span class="sr-only">facebook</span>
-      </a>
-      <a target="_blank" href="https://t.me/Carddsamss">
-        <i class="fab fa-telegram" aria-hidden="true" title="telegram"></i>
-        <span class="sr-only">telegram</span>
-      </a>
-      <a target="_blank" href="https://wa.me/6281215399987">
+      <a target="_blank" href="https://wa.me/628299761181">
         <i class="fab fa-whatsapp" aria-hidden="true" title="whatsapp"></i>
         <span class="sr-only">whatsapp</span>
-      </a>
-      <a target="_blank" href="https://youtu.be/F9C5wsPzTEQ">
-        <i class="fab fa-youtube" aria-hidden="true" title="FreeCodeCamp"></i>
-        <span class="sr-only">youtube</span>
-      </a>
-      <a target="_blank" href="https://www.behance.net">
-        <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
-        <span class="sr-only">Behance</span>
-      </a>
-      <a target="_blank" href="https://codepen.io">
-        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
-        <span class="sr-only">CodePen</span>
       </a>
     </div>
 	</main>
